[package]
authors = ["g0h4n <g0h4n_0@protonmail.com>"]
name = "rusthound"
description = "Active Directory data collector for Bloodhound written in rust."
keywords = ["bloodhound", "pentest", "ldap", "tokio", "async"]
repository = "https://github.com/OPENCYBER-FR/RustHound"
homepage = "https://github.com/OPENCYBER-FR/RustHound"
documentation = "https://docs.rs/rusthound/"
version = "1.1.63"
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
tokio = "1.1"
clap = "4.0"
nom7 = { version="7.0", package="nom" }
colored = "2"
chrono = "0.4"
bitflags = "1.0"
regex = "1"
env_logger = "0.10"
log = "0.4"
lazy_static = "1.4.0"
indicatif = "0.17"
x509-parser = "0.14"
trust-dns-resolver = "0.22"
serde_json = {version = "1.0.89", features = ["preserve_order"]}
zip= {version = "0.6.3", default-features = false}

# macos
#ldap3 = {version = "0.10.6", default-features = false, features = ["tls-native"]}
# windows or linux
ldap3 = {version = "0.10.6", default-features = false, features = ["tls-rustls", "gssapi"]}